Bug 43368 - Windows Live Mail 2011 not detected as email client for "Send as e-mail attachment"
Summary: Windows Live Mail 2011 not detected as email client for "Send as e-mail attac...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.4.4 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0
Keywords:
: 81653 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-30 02:44 UTC by Kyle Keyter
Modified: 2016-04-27 18:09 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kyle Keyter 2011-11-30 02:44:27 UTC
A client was complaining that her LibreOffice wouldn't let her send her documents as email attachments from the file menu. After some investigation it was found that this feature works fine with clients such as Mozilla Thunderbird and Windows Live Mail 2010. However when using Windows Live 2011, it would return the error "No valid email clients configured."

We have tried setting default program access in the control panel. We have also tried setting it manually in LibreOffice, but no such a setting was available.
Comment 1 Kyle Keyter 2011-12-20 02:32:45 UTC
Any updates?
Comment 2 Florian Reisinger 2012-01-24 23:03:13 UTC
Sorry for waiting....
* Does it work with mailto: links in browsers? (Klick on a E-Mail adress from the browser)
* Have you tried with 3.5rc1 (rc2 should be out by the end of this week...)
Comment 3 Florian Reisinger 2012-08-14 14:02:40 UTC
Dear bug submitter!

Due to the fact, that there are a lot of NEEDINFO bugs with no answer within the last six months, we close all of these bugs.

To keep this message short, more infos are available @ https://wiki.documentfoundation.org/QA/NeedinfoClosure#Statement

Thanks for understanding and hopefully updating your bug, so that everything is prepared for developers to fix your problem.

Yours!

Florian
Comment 4 Florian Reisinger 2012-08-14 14:03:35 UTC
Dear bug submitter!

Due to the fact, that there are a lot of NEEDINFO bugs with no answer within the last six months, we close all of these bugs.

To keep this message short, more infos are available @ https://wiki.documentfoundation.org/QA/NeedinfoClosure#Statement

Thanks for understanding and hopefully updating your bug, so that everything is prepared for developers to fix your problem.

Yours!

Florian
Comment 5 Florian Reisinger 2012-08-14 14:08:11 UTC
Dear bug submitter!

Due to the fact, that there are a lot of NEEDINFO bugs with no answer within the last six months, we close all of these bugs.

To keep this message short, more infos are available @ https://wiki.documentfoundation.org/QA/NeedinfoClosure#Statement

Thanks for understanding and hopefully updating your bug, so that everything is prepared for developers to fix your problem.

Yours!

Florian
Comment 6 Florian Reisinger 2012-08-14 14:10:16 UTC
Dear bug submitter!

Due to the fact, that there are a lot of NEEDINFO bugs with no answer within the last six months, we close all of these bugs.

To keep this message short, more infos are available @ https://wiki.documentfoundation.org/QA/NeedinfoClosure#Statement

Thanks for understanding and hopefully updating your bug, so that everything is prepared for developers to fix your problem.

Yours!

Florian
Comment 7 manj_k 2012-08-25 21:27:44 UTC
REOPENED.

Also reported on AskLibO for LibO 3.5.2
→ http://ask.libreoffice.org/question/1963/send-document-via-email-doesnt-work/

Also reported as 'OOo-Bug_115552 - Unable to use Windows Live Mail 2011 to send e-mail' for OOo 3.2.1/3.3.0
→ https://issues.apache.org/ooo/show_bug.cgi?id=115552
Comment 8 Rainer Bielefeld Retired 2012-08-26 08:26:00 UTC
LibO seems to work with any mail client except WLM, to me that seems to be a WLM problem?

That WLM works with other WIN programs proves nothing, what's with other not-Microsoft-Programs?

I found some tips on <http://email.about.com/od/livemaildesktoptips/Windows_Live_Mail_desktop_Tips_Tricks_and_Secrets.htm> 
and 
<http://email.about.com/od/outlookexpresshacks/qt/Command_Line_Mail_in_Windows_Live_Mail_or_Outlook_Express.htm>

Currently I'm tending to make this one as NOTOURBUG if we do not get plausible indication that this is a LibO bug.
Comment 9 Urmas 2012-08-26 13:29:48 UTC
There's a crash in senddoc.exe, confirmed in 3.6.1.2.
Yet Wordpad sends documents fine.
Comment 10 Rainer Bielefeld Retired 2012-08-26 15:47:45 UTC
@Urmas:
Such a Crash confirmed in what Bug Number? Or at least some other comprehensible description?  I only find <http://ask.libreoffice.org/question/3942/senddocexe-errors/#3976> + <http://ask.libreoffice.org/question/1963/send-document-via-email-doesnt-work/> what refer to this bug here and explain nothing. Do you have better sources?

Currently this Bug is not NEW:
<https://wiki.documentfoundation.org/BugTriage#Process>  item 5
Comment 11 Stefan Schmaltz 2012-09-25 14:29:14 UTC
Same Problem here with Outlook 2010 (64bit) on Windows 7 (64bit) (German)
"...unable to find a working e-mail configuration..."

System default email program checked, also Wordpad can send without any problem.
Comment 12 Stefan Schmaltz 2012-09-25 14:37:05 UTC
Additional Infos:
1. yes, mailto: from browsers are working
2. tried with 3.5.4 and 3.6.1 - same result

Hint: I'm a java developer and I have the same problem when I use shellexecute to send a mail. Solution is here, use this form:

rundll32 url.dll,FileProtocolHandler mailto:.....
Comment 13 m_a_riosv 2014-07-22 23:18:18 UTC
*** Bug 81653 has been marked as a duplicate of this bug. ***
Comment 14 Serge Delbono 2014-10-27 13:13:13 UTC
Same bug appears with Apache OpenOffice 4

Tested with:
Windows 7 64 bits
LiveMail 2012
LibreOffice 4.3.0 and 4.3.2.2
Apache OO 4.1.1

It's OK if default mail client is Thunderbird.
Comment 15 Joel Madero 2014-11-04 16:42:25 UTC
Moving to NEW as REOPENED is incorrect.
Comment 16 Mimi_L 2014-12-18 16:46:50 UTC
If any additional info is needed, feel fre to contact me.  End-user, but if I get detailed instructions I can (and am willing) to help solve this issue.
Comment 17 Aron Budea 2014-12-22 04:57:45 UTC
A similar issue was reported here:
https://exceptionreporter.codeplex.com/discussions/284843

The comment points out that MAPILogon()/MAPILogoff() are marked as deprecated, and aren't necessary. I made and tested the change with Windows Live Mail 2011 & Mozilla Thunderbird, and both seem to work fine (should probably be tested with a wider range of clients, though).

In the meantime I came across an issue that is not related to this particular bug, but the simplemail helper: it does not work with Unicode file names. Trying to send such a file is going to yield an error regardless of the e-mail client used. It isn't okay under Linux, either, it doesn't fail, but shows an URL-encoded subject in the e-mail editor, at least when using Thunderbird.
Comment 18 Noel Grandin 2014-12-22 10:37:14 UTC
For the unicode file paths thing, MS only added a unicode variant of MAPISendMail in Windows8.

It also looks like some older MAPI clients don't support Unicode path names, so the most 
compatible thing to do is to call GetShortPathNameW on the path name before passing it to MAPI.

Please open a new bug for the unicode paths thing, and copy these comments there.
Comment 19 Commit Notification 2015-02-06 23:59:41 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7ce1e0e1ecbb1b3ec5e3cc15306a9df7e786c564

fdo#43368 Remove MapiLogon/Logoff calls so simplemail works with WLM

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 QA Administrators 2016-02-21 08:35:59 UTC
** Please read this message in its entirety before responding **

To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year.

There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present.

If you have time, please do the following:

   Test to see if the bug is still present on a currently supported version of LibreOffice 
   (5.0.5 or 5.1.0)  https://www.libreoffice.org/download/

   If the bug is present, please leave a comment that includes the version of LibreOffice and 
   your operating system, and any changes you see in the bug behavior
 
   If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave 
   a short comment that includes your version of LibreOffice and Operating System

Please DO NOT

   Update the version field
   Reply via email (please reply directly on the bug tracker)
   Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not 
   appropriate in this case)


If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3)

http://downloadarchive.documentfoundation.org/libreoffice/old/

2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to "inherited from OOo"; 4b. If the bug was not present in 3.3 - add "regression" to keyword


Feel free to come ask questions or to say hello in our QA chat: http://webchat.freenode.net/?channels=libreoffice-qa

Thank you for your help!

-- The LibreOffice QA Team This NEW Message was generated on: 2016-02-21
Comment 21 Adolfo Jayme Barrientos 2016-04-27 18:09:07 UTC
A fix was committed in early 2015; no idea why this bug wasn’t closed back then. Besides, Windows Live Mail is abandonware; should issues still happen, you should try with the newer Open Live Writer (an open-source fork by Microsoft employees), a newer version of LibreOffice, and a fresh bug report.