fdo#43368 Remove MapiLogon/Logoff calls so simplemail works with WLM

Signed-off-by: Michael Stahl <mstahl@redhat.com>

Conflicts:
	shell/source/win32/simplemail/senddoc.cxx

Change-Id: I31cac063ffb4afbfde068558ebcf5f66ea34d1a8